// Copyright 2023 The Elastic AI Search Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax="proto2";
package EA.servlet;
option cc_generic_services = true;
import "elasticann/proto/servlet/optype.proto";
import "elasticann/proto/servlet/error_code.proto";

message TsoTimestamp {
  optional int64    physical = 1;
  optional int64    logical  = 2;
}

message TsoRequest {
  required OpType        op_type           = 1;
  optional int64         count             = 2;
  optional TsoTimestamp  current_timestamp = 3;
  optional int64         save_physical     = 4;
  optional bool          force             = 5;
};

message TsoResponse {
  required OpType          op_type           = 1;
  optional ErrCode         errcode           = 2;
  optional TsoTimestamp    start_timestamp   = 3;
  optional int64           count             = 4;
  optional string          errmsg            = 5;
  optional int64           save_physical     = 6;
  optional int64           system_time       = 7;
  optional string          leader            = 8;
};